<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/clientOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.31"
        android:gravity="center"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="30sp"
        android:text="@string/hello_world" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/diffButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/diff_button" />

    <Button
        android:id="@+id/pullButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pull_button" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_button" />

    <Button
        android:id="@+id/leaveButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave_button" />

    <Button
        android:id="@+id/capButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cap_button" />

</LinearLayout>